# infermark

./: .gitignore  Cargo.toml  Gemfile  README.md  _config.yml  index.md  requirements-amd.txt  requirements-apple.txt  requirements-common.txt  requirements-cpu.txt  requirements-intel.txt  requirements-nvidia.txt  requirements.txt  run.sh
.github/workflows/: ci.yml  pages.yml
_includes/: smollm2-135m.md  smolvla.md
_layouts/: default.html  home.html
frameworks/burn/: Cargo.toml  run.sh
frameworks/burn/src/: main.rs
frameworks/candle/: Cargo.toml  run.sh
frameworks/candle/src/: main.rs
frameworks/ggml/: bench.py  bench_whisper.py  convert_to_gguf.py  run.sh
frameworks/inferi/: Cargo.toml  run.sh
frameworks/inferi/src/: main.rs
frameworks/jax/: bench.py  run.sh
frameworks/llama-cpp/: bench.py  convert_to_gguf.py  run.sh
frameworks/luminal/: Cargo.toml  run.sh
frameworks/luminal/src/: main.rs
frameworks/max/: bench.py  run.sh
frameworks/meganeura/: Cargo.toml  run.sh
frameworks/meganeura/src/: main.rs
frameworks/mlx/: bench.py  run.sh
frameworks/onnxruntime/: bench.py  run.sh
frameworks/pytorch/: bench.py  run.sh
harness/: Cargo.toml  build.rs
harness/src/: main.rs
models/: ResNet-50.md  SmolLM2-135M.md  SmolVLA.md  StableDiffusion.md  Whisper-tiny.md  download.sh  generate_weights.py
scripts/: cargo-rev.sh  generate_chart.py  update_results.py
