[package]
name = "infermark-harness"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "ML inference benchmark harness: orchestration, timing collection, and output comparison"

[[bin]]
name = "infermark"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
toml = "0.8"
