[package]
name = "infermark-burn"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Burn framework benchmark runner for infermark"

[[bin]]
name = "infermark-burn"
path = "src/main.rs"

[dependencies]
burn = { workspace = true, features = ["wgpu", "train", "autodiff"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
