[package]
name = "inferena-candle"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Candle framework benchmark runner for inferena"

[[bin]]
name = "inferena-candle"
path = "src/main.rs"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
