[package]
name = "infermark-luminal"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Luminal framework benchmark runner for infermark"

[[bin]]
name = "infermark-luminal"
path = "src/main.rs"

[dependencies]
luminal = { workspace = true }
luminal_nn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
