[package]
name = "inferena-luminal"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Luminal framework benchmark runner for inferena"

[[bin]]
name = "inferena-luminal"
path = "src/main.rs"

[features]
default = []
cuda = ["dep:luminal_cuda_lite"]
metal = ["dep:luminal_metal"]

[dependencies]
luminal = { workspace = true }
luminal_nn = { workspace = true }
luminal_cuda_lite = { workspace = true, optional = true }
luminal_metal = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
