[package]
name = "infermark-meganeura"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Meganeura framework benchmark runner for infermark"

[[bin]]
name = "infermark-meganeura"
path = "src/main.rs"

[dependencies]
meganeura = { workspace = true }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "native-tls"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
env_logger = "0.11"
